[tool.poetry]
name = "trackma"
version = "0.10.3"
description = "Open multi-site list manager"
authors = ["z411 <z411@omaera.org>"]
license = "GPL-3.0-or-later"
readme = "README.md"
homepage = "https://z411.github.io/trackma/"
repository = "https://github.com/z411/trackma"
keywords = [
    "list manager", "curses", "gtk", "qt", "myanimelist",
    "kitsu", "anilist", "shikimori",  "vndb"
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: End Users/Desktop",
    "Topic :: Internet",
    "Topic :: Multimedia",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Operating System :: POSIX",
    "License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)",
]


[tool.poetry.dependencies]
python = "^3.9"
inotify = { version = "^0.2.10", optional = true }
pillow = { version = "^11.0.0", optional = true }
pycairo = { version = "^1.20.0", optional = true }
pygobject = { version = "^3.42.1", optional = true }
pyinotify = { version = "^0.9.6", optional = true }
pypresence = { version = "^4.2.1", optional = true }
pyqt6 = { version = "^6.2.0", optional = true }
requests-oauthlib = { version = "^1.2.0 || ^2.0.0", optional = true }
twitter = { version = "^1.19.3", optional = true }
urwid = { version = "^2.1.2", optional = true }
jeepney = {version = "^0.8.0", optional = true}
anitopy = {version = "^2.0.0", optional = true}

[tool.poetry.extras]
gtk = ["pygobject", "pycairo", "pillow"]
qt = ["pyqt6", "pillow"]
curses = ["urwid"]
ui = ["pygobject", "pycairo", "pillow", "pyqt6", "urwid"]
trackers = ["inotify", "pyinotify", "jeepney"]
discord_rpc = ["pypresence"]
twitter = ["twitter", "requests-oauthlib"]
anitopy = ["anitopy"]

[tool.poetry.scripts]
trackma = "trackma.ui.cli:main"
trackma-curses = "trackma.ui.curses:main"
trackma-gtk = "trackma.ui.gtk:main"
trackma-qt = "trackma.ui.qt:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
