[build-system]
requires = ["hatchling>=1.27"]
build-backend = "hatchling.build"

[project]
name = "trackma"
version = "0.10.3"
description = "Open multi-site list manager"
authors = [{ name = "z411", email = "z411@omaera.org" }]
license = "GPL-3.0-or-later"
readme = "README.md"
requires-python = ">=3.10"
keywords = [
    "list manager",
    "curses",
    "gtk",
    "qt",
    "myanimelist",
    "kitsu",
    "anilist",
    "shikimori",
    "vndb",
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: End Users/Desktop",
    "Topic :: Internet",
    "Topic :: Multimedia",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Operating System :: POSIX",
    "License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)",
]
dependencies = []

[project.optional-dependencies]
gtk = [
    "pygobject>=3.42.1,<4.0.0",
    "pycairo>=1.20.0,<2.0.0",
    "pillow>=11.0.0,<12.0.0",
]
qt = ["pyqt6>=6.2.0,<7.0.0", "pillow>=11.0.0,<12.0.0"]
curses = ["urwid>=2.1.2,<3.0.0"]
ui = [
    "pygobject>=3.42.1,<4.0.0",
    "pycairo>=1.20.0,<2.0.0",
    "pillow>=11.0.0,<12.0.0",
    "pyqt6>=6.2.0,<7.0.0",
    "urwid>=2.1.2,<3.0.0",
]
trackers = [
    "inotify>=0.2.10,<0.3.0",
    "pyinotify>=0.9.6,<0.10.0",
    "jeepney>=0.8.0,<0.9.0",
]
discord_rpc = ["pypresence>=4.2.1,<5.0.0"]
twitter = ["twitter>=1.19.3,<2.0.0", "requests-oauthlib>=1.2.0,<3.0.0"]
anitopy = ["anitopy>=2.0.0,<3.0.0"]

[project.scripts]
trackma = "trackma.ui.cli:main"
trackma-curses = "trackma.ui.curses:main"
trackma-gtk = "trackma.ui.gtk:main"
trackma-qt = "trackma.ui.qt:main"

[project.urls]
Homepage = "https://z411.github.io/trackma/"
Repository = "https://github.com/z411/trackma"

[tool.hatch.build.targets.wheel]
only-include = ["trackma", "twitter_authorize.py"]

[tool.hatch.build.targets.sdist]
include = ["trackma/**", "twitter_authorize.py", "README.md", "pyproject.toml"]

[tool.pytest.ini_options]
pythonpath = ["."]
