[project]
name = "trackma"
version = "0.10.3"
description = "Open multi-site list manager"
authors = [{ name = "z411", email = "z411@omaera.org" }]
requires-python = ">=3.9,<4"
readme = "README.md"
license = "GPL-3.0-or-later"
keywords = [
    "list manager",
    "curses",
    "gtk",
    "qt",
    "myanimelist",
    "kitsu",
    "anilist",
    "shikimori",
    "vndb",
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: End Users/Desktop",
    "Topic :: Internet",
    "Topic :: Multimedia",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Operating System :: POSIX",
    "License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)",
]

[project.optional-dependencies]
gtk = [
    "pygobject>=3.42.1,<4",
    "pycairo>=1.20.0,<2",
    "pillow>=11.0.0,<12",
]
qt = [
    "pyqt6>=6.2.0,<7",
    "pillow>=11.0.0,<12",
]
curses = ["urwid>=2.1.2,<3"]
ui = [
    "pygobject>=3.42.1,<4",
    "pycairo>=1.20.0,<2",
    "pillow>=11.0.0,<12",
    "pyqt6>=6.2.0,<7",
    "urwid>=2.1.2,<3",
]
trackers = [
    "inotify>=0.2.10,<0.3",
    "pyinotify>=0.9.6,<0.10",
    "jeepney>=0.8.0,<0.9",
]
discord_rpc = ["pypresence>=4.2.1,<5"]
twitter = [
    "twitter>=1.19.3,<2",
    "requests-oauthlib>=2.0.0,<3",
]
anitopy = ["anitopy>=2.0.0,<3"]

[project.urls]
Homepage = "https://z411.github.io/trackma/"
Repository = "https://github.com/z411/trackma"

[project.scripts]
trackma = "trackma.ui.cli:main"
trackma-curses = "trackma.ui.curses:main"
trackma-gtk = "trackma.ui.gtk:main"
trackma-qt = "trackma.ui.qt:main"

[tool.uv]

[tool.uv.build-backend]
module-root = ""

[build-system]
requires = ["uv_build>=0.11.24,<0.12.0"]
build-backend = "uv_build"
